# fastapi-survival-game

./: Dockerfile  README.md  alembic.ini  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 05f99f8a32a8_add_count_items.py  2025_06_17_1852-0e905a00cec6_.py  2025_06_22_1830-2d17909d0fbf_.py  23b2706cdd0a_.py  28310c944f98_add_new_tables.py  3799c4c33b03_.py  381b45052d22_.py  3a9ea4266e50_add_new_tables.py  4a13285f6626_add_new_tables.py  5b6868a4b0cd_.py  5c61f8c857da_add_playerbasestorage_model.py  67c54eec26ff_.py  709d867cf34e_.py  795dd2b240c0_id_to_bigint.py  7eff3741a673_.py  825c43194534_.py  87e3c2819896_rename_column.py  88cb8691a2e2_.py  b8415f6df174_add_new_tables.py  be4c199f24d1_.py  c6bcd4c1c6ee_str_datetime.py  c6e9f2673bbd_add_icons.py  cc0e4295a57a_.py  e5795c11760d_.py  f3dbbfa3ca2a_add_new_tables.py
app/: app_celery.py  main.py
app/api/: bases.py  gameplay.py  items.py  map_objects.py  maps.py  players.py  resources.py  telegram.py  test.py  users.py
app/bot/: bot.py
app/broker/: main.py  task.py
app/core/: config.py  database.py  dependencies.py
app/crud/: base.py  gameplay.py  map_objects.py  maps.py  players.py  users.py
app/depends/: auth.py  deps.py
app/enums/: item.py
app/faststream/: main.py  task.py
app/models/: __init__.py  building.py  farm.py  gameplay.py  gameplay_model.py  item.py  map.py  map_model.py  map_objects.py  maps.py  player.py  player_model.py  players.py  resource.py  users.py
app/schemas/: base.py  (+12 more)
docker/: docker-compose.yml
tests/: conftest.py  utils.py
(+57 files in other folders)
