[tool.poetry]
name = "fastapi-survival-game"
version = "0.1.0"
description = ""
authors = ["Aleksey <aleksey18003@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
aiogram = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
